Bug 487253 - Neochat is unable to join new rooms
Summary: Neochat is unable to join new rooms
Status: RESOLVED FIXED
Alias: None
Product: NeoChat
Classification: Applications
Component: General (other bugs)
Version First Reported In: 24.02.2
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Tobias Fella
URL:
Keywords:
: 501927 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-05-19 22:55 UTC by rjx_
Modified: 2025-03-24 20:50 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 25.03
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description rjx_ 2024-05-19 22:55:01 UTC
SUMMARY
After joining around 10 rooms on kde.org's homeserver, i am currently unable to join any more/new ones from neochat, this worked fine from a web instance of Element however.

Reproducer:
Go to the search field (on the left) and search for something, on "no rooms found" click "Search in room directory", chose kde.org, find a room you had not joined yet, click on it once.
Neochat will show a "Joined" status, but when you return to default chat/rooms view, it will either give you an error "Failed to join room No known servers", or just silently won't join that room.


SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 6.0.4
KDE Frameworks Version: 6.2.0
Qt Version: 6.7.0
Graphics Platform: Wayland

ADDITIONAL INFORMATION
Tested with tchncs.de homeserver.
Comment 1 Joshua Goins 2025-03-06 02:06:02 UTC
Part of this is 491359 (the fact that the UX sucks), but I have fixed the "no known servers" one I think.
Comment 2 Joshua Goins 2025-03-06 15:54:07 UTC
Git commit f1253e4ede7ba6455273556a14993f49835bd86e by Joshua Goins.
Committed on 06/03/2025 at 15:39.
Pushed by redstrate into branch 'master'.

Make joining remote rooms more reliable

When joining remote rooms we have to specify another homeserver (that is in the
room) to help us join. The matrix documentation is a little unclear what to do
in this scenario, so instead of giving up let's at least brute force it with the
server in the alias or room id.

This *does* work and allows my server to join rooms in NeoChat I otherwise
couldn't.
Related: bug 491359
FIXED-IN: 24.12.3

M  +9    -1    src/roommanager.cpp

https://invent.kde.org/network/neochat/-/commit/f1253e4ede7ba6455273556a14993f49835bd86e
Comment 3 Joshua Goins 2025-03-06 16:08:45 UTC
Git commit 2f6d7308c569b29822540bca143236ded2526c2d by Joshua Goins.
Committed on 06/03/2025 at 15:54.
Pushed by redstrate into branch 'release/24.12'.

Make joining remote rooms more reliable

When joining remote rooms we have to specify another homeserver (that is in the
room) to help us join. The matrix documentation is a little unclear what to do
in this scenario, so instead of giving up let's at least brute force it with the
server in the alias or room id.

This *does* work and allows my server to join rooms in NeoChat I otherwise
couldn't.
Related: bug 491359
FIXED-IN: 24.12.3


(cherry picked from commit f1253e4ede7ba6455273556a14993f49835bd86e)

Co-authored-by: Joshua Goins <josh@redstrate.com>

M  +9    -1    src/roommanager.cpp

https://invent.kde.org/network/neochat/-/commit/2f6d7308c569b29822540bca143236ded2526c2d
Comment 4 Joshua Goins 2025-03-24 20:50:15 UTC
*** Bug 501927 has been marked as a duplicate of this bug. ***
Comment 5 Joshua Goins 2025-03-24 20:50:41 UTC
The version-fixed-in was wrong, corrected to 25.03